--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active-nav"  href="index.html">Home</a>
+                    <a class="nav-link active-nav" href="index.html">Home</a>
                     <a class="nav-link" href="Pages/Devices/devices.html">Devices</a>
                     <a class="nav-link" href="/Pages/Health/health.html">Health</a>
                     <a class="nav-link" href="Pages/Computation/Computation.html">Computation</a>
@@ -117,7 +117,8 @@
                     around us, acting on every scale.</h5>
                 <p>Quantum mechanics, science dealing with the behaviour of matter and light on the atomic and
                     subatomicscale. It attempts to describe and account for the properties of molecules and atoms and
-                    their constituents—electrons, protons, neutrons, and other more esoteric particles such as quarks and
+                    their constituents—electrons, protons, neutrons, and other more esoteric particles such as quarks
+                    and
                     gluons. These properties include the interactions of the particles with one another and with
                     electromagnetic radiation (i.e., light, X-rays, and gamma rays).
                     The behaviour of matter and radiation on the atomic scale often seems peculiar, and the consequences
@@ -147,7 +148,10 @@
             <div class="letter">n</div>
         </div>
         <div id="Video">
-            <iframe src="https://www.youtube-nocookie.com/embed/ZbpRlKRaE8Q?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/ZbpRlKRaE8Q?rel=0" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </div>
 
@@ -211,46 +215,48 @@
             </div>
         </div>
     </div>
-        <!-- Graph -->
-        <div id="Graph">
-            <div class="designWords">
-                <div class="word2">S c h r o d i n g e r</div>
-                <div class="word2">W a v e</div>
-                <div class="word2">G r a p h s</div>
-            </div>
-
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="src/n1.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="src/n2.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="src/n3.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="src/n10.png" class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-              <div id="downloadExe">
-                <a href="/Data/schrodingerEquation.exe" download="Schrodinger Wave.exe">
-                    <span>Download Exe File</span>
-                    <img src="src/download.svg" alt="⬇">
-                </a>
-                
-              </div>
+    <!-- Graph -->
+    <div id="Graph">
+        <div class="designWords">
+            <div class="word2">S c h r o d i n g e r</div>
+            <div class="word2">W a v e</div>
+            <div class="word2">G r a p h s</div>
         </div>
+
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="src/n1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="src/n2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="src/n3.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="src/n10.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div id="downloadExe">
+            <a href="/Data/schrodingerEquation.exe" download="Schrodinger Wave.exe">
+                <span>Download Exe File</span>
+                <img src="src/download.svg" alt="⬇">
+            </a>
+
+        </div>
+    </div>
 
     <!-- Project Info -->
     <div id="Container2">
@@ -281,22 +287,29 @@
             <div id="info">
                 <div id="left">
                     <div id="Mentor">
-                        Mentor Name:- 
-                        <a href="/Data/Mentor.pdf" download="Dr. Ambika Tudwal (Resume for students)">Dr. Ambika Tundwal</a>
+                        Mentor Name:-
+                        <a href="/Data/Mentor.pdf" download="Dr. Ambika Tudwal (Resume for students)">Dr. Ambika
+                            Tundwal</a>
                     </div>
                     <div class="Students">
                         <h4>Students Name: </h4>
                         <ul>
-                            <li>06213203121 - <a href="#" target="_blank">Vishal Sharma</a></li>
-                            <li>07113203121 - <a href="#" target="_blank">Vinit Kumar</a></li>
-                            <li>11513203121 - <a href="https://www.linkedin.com/in/kartik-joshi-907251217/"  target="_blank">Kartik Joshi</a></li>
-                            <li>11713203121 - <a href="https://www.linkedin.com/in/shubham-pandey-151852244" target="_blank">Shubham Pandey</a></li>
+                            <li>06213203121 - <a href="https://www.linkedin.com/in/vishal-sharma-801996244"
+                                    target="_blank">Vishal Sharma</a></li>
+                            <li>07113203121 - <a href="https://www.linkedin.com/in/vinit-kumar-913037245"
+                                    target="_blank">Vinit Kumar</a></li>
+                            <li>11513203121 - <a href="https://www.linkedin.com/in/kartik-joshi-907251217/"
+                                    target="_blank">Kartik Joshi</a></li>
+                            <li>11713203121 - <a href="https://www.linkedin.com/in/shubham-pandey-151852244"
+                                    target="_blank">Shubham Pandey</a></li>
                         </ul>
                     </div>
                 </div>
                 <div id="right">
-                    <h3><a href="http://www.ipu.ac.in/"  target="_blank">Guru Gobind Singh Indraprastha University</a></h3>
-                    <h4><a href="https://www.gtbit.org/"  target="_blank">Guru Tegh Bahadur Institute of Technology</a></h4>
+                    <h3><a href="http://www.ipu.ac.in/" target="_blank">Guru Gobind Singh Indraprastha University</a>
+                    </h3>
+                    <h4><a href="https://www.gtbit.org/" target="_blank">Guru Tegh Bahadur Institute of Technology</a>
+                    </h4>
                     <h5>Informational Technology</h5>
                 </div>
             </div>
